example/invalid/whack/test.wacc
begin
    println 123
end
